Changelog for pdoTools.

2.3.2 pl
==============
- [#196] [pdoPage] Added workaround to support ClientConfig tags in ajax mode.

2.3.1 pl
==============
- [pdoSitemap] Lightning fast work chunks processing with &scheme=`uri`.
- [Fenom] Improved check of syntax before processing.

2.3.0 pl
==============
- Removed shortcuts from system core.
- PSR-2.
- [Fenom] Added default modifiers: "url" and "lexicon".
- [pdoCrumbs] Changed default chunks to ul -> li.
- [#190] [pdoSitemap] Changed date format to ISO 8601.

2.2.8 pl
==============
- [Fenom] Use modResource::getContent() method to get content of current resource in {$_modx->resource}.

2.2.7 pl
==============
- [pdoPage] Ability to get access to a javascript configs from 3rd party scripts.

2.2.6 pl
==============
- [#184] [Fenom] Updated to version 2.8.2.

2.2.5 pl
==============
- [#182] [pdoTitle] Added passing a parameters into nested pdoCrumbs.
- [pdoSitemap] Added processing of MODX tags if needed.
- Added method pdoTools::makeUrl().
- [#181] New url schema type - "uri".

2.2.4 pl
==============
- [Fenom] Fixed speed issues when MODX snippets are run as Fenom modifiers.
- [pdoUsers] Fixed overwrite modUser.id by modUserProfile.id.

2.2.3 pl
==============
- [pdoPage] Fixed processing of uncached conditions in chunks when ajax mode is enabled.

2.2.2 pl
==============
- [pdoPage] Added new parameter &pageLinkScheme.

2.2.1 pl
==============
- [#155] [pdoPage] Added new parameter &ajaxHistory.
- [pdoPage] Added connector for requests in ajax mode.

2.2.0 pl
==============
- [#175] [pdoFetch] Ability to specify sequence of table joins.
- [#174] [Fenom] Ability to add Fenom modifiers into pdoParser.

2.1.21 pl
==============
- [#175] [pdoFetch] Ability to specify sequence of table joins.
- [#176] [pdoUsers] Fixed &toPlaceholders with &returnIds.

2.1.20 pl
==============
- [pdoSitemap] Fixed default &cacheKey.

2.1.19 pl
==============
- [Fenom] Disabled $options in cacheManager::set() due to security reasons.
